End of Section 3

--- a/ChoreApp.API/appsettings.json
+++ b/ChoreApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "this is my encrypted key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=ChoreApp.db"
   },
