End of photo part

--- a/ChoreApp.API/appsettings.json
+++ b/ChoreApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dthypkuvw",
+    "ApiKey": "293143637852921",
+    "ApiSecret": "KXx7NlpOLlVcA3x-SxhBTlUWk7U"
+  }
 }
